push long forgotten tweaks

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,11 @@
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'akohlbecker/aw-watcher-tmux'
 
 set  -g default-terminal "screen-256color"
 set  -g base-index      1
